--- a/pom.xml
+++ b/pom.xml
@@ -2,10 +2,10 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.itc.test</groupId>
-  <artifactId>AynaxTestAutomationTest</artifactId>
+  <artifactId>SeleniumAutomationTest</artifactId>
   <packaging>jar</packaging>
   <version>1.0-SNAPSHOT</version>
-  <name>AynaxTestAutomationTest</name>
+  <name>SeleniumAutomationTest</name>
   <url>http://maven.apache.org</url>
   <dependencies>
     <dependency>
@@ -14,5 +14,18 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+      <dependency>
+        <groupId>org.seleniumhq.selenium</groupId>
+        <artifactId>selenium-java</artifactId>
+        <version>2.53.0</version>
+    </dependency> 
+    <dependency>
+  <groupId>org.testng</groupId>
+  <artifactId>testng</artifactId>
+  <version>6.8</version>
+  <scope>test</scope>
+</dependency>
+    
   </dependencies>
+  
 </project>
